# AstroAPI

./: .dockerignore  .gitignore  Dockerfile  db-only-compose.yml  docker-compose.yml  main.py  pyproject.toml
app/: constants.py  main.py  models.py
app/fixtures/: collector.py
app/loader/: get_planets.py  load_to_pg.py
app/routers/: exoplanets.py  stars.py
app/services/: generator.py
app/utils/: exosky.py
data/: Earth.json  GJ 1002 b.json  GJ 514 b.json  HD 40307 g.json  HN Lib b.json  K2-18 b.json  K2-288 B b.json  Kepler-138 e.json  LHS 1140 b.json  Proxima Cen b.json  TOI-2095 c.json  TOI-2257 b.json  TOI-700 d.json  TOI-715 b.json  TOI-904 c.json  TRAPPIST-1 d.json  Teegarden's Star b.json  Wolf 1069 b.json  chrome-net-export-log.json  exoplanets.csv  planets.csv  stars.csv
infra/: default.conf  prod-docker-compose.yml
